button block on mobile fixes #32

--- a/_sass/est/_buttons.scss
+++ b/_sass/est/_buttons.scss
@@ -40,6 +40,11 @@
   @include box-shadow(var(--#{$prefix}btn-box-shadow));
   @include transition($btn-transition);
 
+  @include media-breakpoint-down(sm) {
+    display: block;
+    width: 100%;
+  }
+
   &:hover {
     color: var(--#{$prefix}btn-hover-color);
     text-decoration: if($link-hover-decoration == underline, none, null);
@@ -105,6 +110,10 @@
   }
   & + .btn {
     margin-left: $btn-spacing;
+    @include media-breakpoint-down(sm) {
+      margin-left: 0;
+      margin-top: $btn-spacing;
+    }
   }
 }
 
